// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders 1`] = `
<button
  class="sc-beySbM sc-guDLRT jrPZFR cHSgNE"
>
  foo
</button>
`;

exports[`renders as a secondary button 1`] = `
<button
  class="sc-beySbM sc-guDLRT fBtkQq cHSgNE"
>
  foo
</button>
`;
